--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.22.15",
     "@types/jest": "^29.5.4",
     "babel-jest": "^29.6.4",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "jsdoc": "^4.0.2"
   }
 }
