--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^29.5.4",
     "babel-jest": "^29.6.4",
     "jest": "^29.6.4",
-    "jsdoc": "^4.0.2"
+    "jsdoc": "^4.0.2",
+    "jsdoc-to-markdown": "^8.0.0"
   }
 }
