--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "src/enclstcore.js"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "makeapidoc": "documentation build src/** -f md -o doc/api.md"
   },
   "dependencies": {},
   "keywords": [
@@ -22,8 +23,8 @@
     "@babel/preset-env": "^7.22.15",
     "@types/jest": "^29.5.4",
     "babel-jest": "^29.6.4",
+    "documentation": "^14.0.2",
     "jest": "^29.6.4",
-    "jsdoc": "^4.0.2",
-    "jsdoc-to-markdown": "^8.0.0"
+    "jsdoc": "^4.0.2"
   }
 }
