--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "test": "jest",
-    "makeapidoc": "documentation build src/** -f md -o doc/api.md"
+    "makeapidoc": "documentation build src/** -f md -o doc/api.md",
+    "makedoc": "jsdoc src -d docs"
   },
   "dependencies": {},
   "keywords": [
