--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "jest",
     "makeapidoc": "documentation build src/** -f md -o doc/api.md",
-    "makedoc": "jsdoc -r src ./docs/assets/README.md -d docs"
+    "makedoc": "jsdoc -r src ./docs/assets/README.md -d docs",
+    "cleandoc": "rm -rf ./docs/*"
   },
   "dependencies": {},
   "keywords": [
@@ -26,6 +27,6 @@
     "babel-jest": "^29.6.4",
     "documentation": "^14.0.2",
     "jest": "^29.6.4",
-    "jsdoc": "^4.0.2"
+    "jsdoc": "^4.0.4"
   }
 }
